syntax = "proto3";
package orderpb;

option go_package = "github.com/0X10CC/gorder/common/genproto/orderpb";

import "google/protobuf/empty.proto";

service OrderService {
  rpc CreateOrder(CreteOrderRequest) returns(google.protobuf.Empty);
  rpc GetOrder(GetOrderRequest) returns(Order);
  rpc UpdateOrder(Order) returns(google.protobuf.Empty);
}

message CreteOrderRequest {
  string CustomerID = 1;
  repeated ItemWithQuantity Items = 2;
}

message GetOrderRequest {
  string OrderID = 1;
  string CustomerID = 2;
}

message ItemWithQuantity {
  string ID = 1;
  int32 Quantity = 2;
}

message Order {
  string ID = 1;
  string CustomerID = 2;
  string Status = 3;
  repeated Item Items = 4;
}

message Item {
  string ID = 1;
  string Name = 2;
  int32 Quantity = 3;
  string PriceID = 4;
}
